# ci-truth-serum

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .template-sync-conflicts  CHANGELOG.md  CLAUDE.md  README.md  cosmic-ray.toml  package.json  pyproject.toml
.claude/hooks/: safe-launch.sh  session-setup.sh
.github/: workflow-secrets.txt
.github/scripts/: aggregate-mutation.py  check-symlinks.sh  check-token-scope.sh  gitleaks-scan.sh  install-gitleaks.sh  manage-release-failure-issue.sh  mutation_shards.py  release-prep-bump-version.sh  release-prep.sh  release-readiness.sh  run-mutation-shard.sh  tag-release.sh  template-sync.sh  validate-config.sh
.github/workflows/: build-publish-notify.yaml  ci.yaml  claude-pr-review.yaml  decide-reusable.yaml  dependabot-auto-merge.yaml  gitleaks.yaml  hook-lifecycle.yaml  lint.yaml  mutation.yaml  node-tests.yaml  phone-home.yaml  pre-commit.yaml  release-prep.yaml  release-readiness.yaml  security-vulnerability-scan.yaml  sync-required-checks.yaml  zizmor.yaml  (+3 more)
.hooks/: lint-skills.sh  pre-commit
changelog.d/: annotation-matcher.changed.md  auto-release-readiness.added.md  bash-ast-astral-crash.fixed.md  bash-ast-crash-safety.fixed.md  bash-ast-parser.fixed.md  check-cancellable-required-check.added.md  check-case-default.added.md  check-cron-comment.added.md  check-echo-fallback.added.md  check-env-symmetry.added.md  check-externalized-markers.added.md  check-failure-notifier-coverage.added.md  check-frozen-head-sha.added.md  check-job-timeout.added.md  check-lockstep-pins.added.md  check-path-gate-deps.added.md  check-pending-cancel-concurrency.added.md  check-pin-comment-truth.added.md  check-provenance-repo-url.added.md  check-requires-concurrency.added.md  check-secret-file-perms.added.md  check-stderr-merge-parse.added.md  check-stray-tool-markup.added.md  check-token-fallback.added.md  check-toolchain-skips.added.md  check-trusted-base.added.md  check-workflow-secret-names.added.md  ci-supply-chain.fixed.md  comment-optout-bypass.security.md  decide-filter-gaps.fixed.md  drift-guard-structural.changed.md  flag-arity.added.md  lint-correctness.fixed.md  package-rename.changed.md  pinned-downloads-add-url.added.md  pipefail-grep-ast.fixed.md  pipefail-grep-pipe.added.md  pkg-rename.changed.md  prose-honesty-extras.added.md  release-canary.added.md  (+6 more)
ci_truth_serum/: __init__.py  _bash_ast.py  _linecheck.py  check_always_reporter.py  check_cancellable_required_check.py  check_case_default.py  check_claude_model.py  check_concurrency.py  check_cron_comment.py  check_doc_line_refs.py  check_drift_guards.py  check_echo_fallback.py  check_exit_suppression.py  check_externalized_markers.py  check_failure_notifier_coverage.py  check_flag_arity.py  check_frozen_head_sha.py  check_global_stdio_swap.py  check_graceful_handwave.py  check_historical_comments.py  check_inline_run_length.py  check_path_gate_deps.py  check_pin_comment_truth.py  check_pinned_downloads.py  check_pipefail_grep_pipe.py  check_pr_paths.py  check_required_reporter.py  check_secret_file_perms.py  check_static_concurrency.py  check_stderr_merge_parse.py  check_stderr_suppression.py  check_stray_tool_markup.py  check_substitution_exit_swallow.py  check_symlinks.sh  check_token_fallback.py  check_toolchain_skips.py  check_trusted_base.py  check_unnamed_regex_groups.py  check_workflow_pipefail.py  check_workflow_secret_names.py  (+2 more)
hooks/: _bash_ast.py  _linecheck.py  check_always_reporter.py  check_cancellable_required_check.py  check_case_default.py  check_claude_model.py  check_concurrency.py  check_cron_comment.py  check_drift_guards.py  check_env_symmetry.py  check_exit_suppression.py  check_externalized_markers.py  check_failure_notifier_coverage.py  check_flag_arity.py  check_graceful_handwave.py  check_inline_run_length.py  check_job_timeout.py  check_lockstep_pins.py  check_path_gate_deps.py  check_pending_cancel_concurrency.py  check_pin_comment_truth.py  check_pinned_base_images.py  check_pinned_downloads.py  check_pipefail_grep_pipe.py  check_pr_paths.py  check_provenance_repo_url.py  check_required_reporter.py  check_requires_concurrency.py  check_secret_file_perms.py  check_static_concurrency.py  check_stray_tool_markup.py  check_substitution_exit_swallow.py  check_token_fallback.py  check_workflow_pipefail.py  release_canary.py  run_tier.py  sync_required_checks.py
tests/: _helpers.py  conftest.py  test_aggregate_mutation.py  test_install_gitleaks.py  test_mutation_shards.py  test_phone_home_extract.py  test_request_claude_resolve.py  test_required_env.py  test_script_configured.py  test_tag_release.py  test_template_sync.py  test_validate_config.py
(+62 files in other folders)
